# Veeam-HealthCheck-Simplifier

./: .gitignore  AGENTS.md  CONTRIBUTORS.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  vhc_simplifier.py
.agents/: note.txt
.agents/skills/vhc-codex-verify/: SKILL.md
.agents/skills/vhc-export-validation/: SKILL.md
.agents/skills/vhc-optimize/: SKILL.md
.agents/skills/vhc-ponytail/: SKILL.md
.agents/skills/vhc-refactor/: SKILL.md
.agents/skills/vhc-remediation-safety/: SKILL.md
.claude/: Skills-Readme.md
.claude/commands/: optimize.md  ponytail.md
.codex/: README.md
.codex/commands/: README.md  codex-verify.md  optimize.md  ponytail.md  refactor.md  vhc-export-validation.md  vhc-remediation-safety.md
.codex/skills/codex-verify/: SKILL.md
.codex/skills/optimize/: SKILL.md
.codex/skills/ponytail/: SKILL.md
.codex/skills/refactor/: SKILL.md
.codex/skills/vhc-export-validation/: SKILL.md
.codex/skills/vhc-remediation-safety/: SKILL.md
.github/workflows/: ci.yml  codeql.yml  devskim.yml  gitleaks.yml  ruff.yml
deploy/: README.md  vhc-simplifier.service  vhc-simplifier.timer
deploy/logrotate/: vhc-simplifier
tests/: conftest.py  test_coverage_gaps.py  test_mock_veeam_environment.py  test_vbr_server_simulation.py  test_vhc_simplifier.py  test_windows_server_env.py
