[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vhc-simplifier"
version = "4.1.0"
description = "Veeam Health Check Simplifier — processes VBR Health Check exports into remediation artifacts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "CGFixIT" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "pandas>=2.0.0",
]

[project.optional-dependencies]
salesforce = [
    "simple-salesforce>=1.12.0",
]
slack = [
    "httpx>=0.27.0",
]
integrations = [
    "simple-salesforce>=1.12.0",
    "httpx>=0.27.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.0",
]

[project.scripts]
vhc-simplifier = "vhc_simplifier:main"

[tool.setuptools]
py-modules = ["vhc_simplifier"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = [
    "UP017",  # datetime.UTC alias — keep timezone.utc for 3.12 compat clarity
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106"]  # assert and test credentials are fine in tests

[tool.coverage.run]
source = ["vhc_simplifier"]

[tool.coverage.report]
fail_under = 80
show_missing = true
